--- a/Info.plist
+++ b/Info.plist
@@ -1,1 +1,20 @@
-<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd"><plist version="1.0"><dict>	<key>CFBundleExecutable</key>	<string>EXEC</string>	<key>CFBundleGetInfoString</key>	<string>EXEC plugin VERSION_STR Copyright (C) Telegraphics Pty Ltd 1995-2005</string>	<key>CFBundleIdentifier</key>	<string>com.telegraphics.EXEC</string>	<key>CFBundleName</key>	<string>EXEC</string>	<key>CFBundleShortVersionString</key>	<string>VERSION_STR</string>	<key>CFBundleSignature</key>	<string>8BIM</string>	<key>CFBundlePackageType</key>	<string>8BFM</string></dict></plist>
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+	<key>CFBundleExecutable</key>
+	<string>EXEC</string>
+	<key>CFBundleGetInfoString</key>
+	<string>EXEC plugin VERSION_STR Copyright (C) Telegraphics Pty Ltd 1995-2005</string>
+	<key>CFBundleIdentifier</key>
+	<string>com.telegraphics.EXEC</string>
+	<key>CFBundleName</key>
+	<string>EXEC</string>
+	<key>CFBundleShortVersionString</key>
+	<string>VERSION_STR</string>
+	<key>CFBundleSignature</key>
+	<string>8BIM</string>
+	<key>CFBundlePackageType</key>
+	<string>8BFM</string>
+</dict>
+</plist>
