cosmetic changes only
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@62 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/PiPL.rc
+++ b/PiPL.rc
@@ -126,10 +126,10 @@ AETE_ID aete
 
 		1, /*events*/					/* structure for filters */
 
-			"\015FilterFoundry",        /* event name               */
-			"\0",                       /* event description        */
-			LC(f,i,F,o),                /* event class              */
-			LC(f,i,F,o),                /* event ID                 */
+			"\015FilterFoundry",		/* event name               */
+			"\0",						/* event description        */
+			LC(f,i,F,o),				/* event class              */
+			LC(f,i,F,o),				/* event ID                 */
 			RC_NO_REPLY,
 			RC_IMAGE_DIRECT_PARAM,
 			12,
@@ -178,7 +178,7 @@ BEGIN
             VALUE "CompanyName",		"Telegraphics Pty Ltd, www.telegraphics.com.au\0"
             VALUE "FileDescription",	"Filter Foundry plugin for Photoshop(R)\0"
             VALUE "FileVersion",		VERSION_STR "\0"
-            VALUE "InternalName",		"FilterFoundry\0"
+            /*VALUE "InternalName",		"FilterFoundry\0"*/
             VALUE "LegalCopyright",		"Copyright (C) 2005 Toby Thain\0"
             VALUE "License",			"This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version.\0"
             /*VALUE "LegalTrademarks",	"\0"*/
