--- a/PiPL.rc
+++ b/PiPL.rc
@@ -179,7 +179,7 @@ BEGIN
             VALUE "FileDescription",	"Filter Foundry plugin for Photoshop(R)\0"
             VALUE "FileVersion",		VERSION_STR "\0"
             /*VALUE "InternalName",		"FilterFoundry\0"*/
-            VALUE "LegalCopyright",		"Copyright (C) 2005 Toby Thain\0"
+            VALUE "LegalCopyright",		"Copyright (C) 2003-7 Toby Thain\0"
             VALUE "License",			"This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version.\0"
             /*VALUE "LegalTrademarks",	"\0"*/
             VALUE "OriginalFilename",	"FilterFoundry.8bi\0"
