--- a/win_res.rc
+++ b/win_res.rc
@@ -1,6 +1,6 @@
 /*
     This file is part of "Filter Foundry", a filter plugin for Adobe Photoshop
-    Copyright (C) 2003-5 Toby Thain, toby@telegraphics.com.au
+    Copyright (C) 2003-7 Toby Thain, toby@telegraphics.com.au
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by  
@@ -17,8 +17,7 @@
     Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
 
-/* wrapper file for Windows resource compiler input
-   Copyright (C) 2003-4 Toby Thain <toby@telegraphics.com.au> */
+/* wrapper file for Windows resource compiler input */
 
 #include "PiPL.rc"
 #include "ui_win.rc"
