simple parameter obfuscation in standalone plugins (wishlist #7)
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@85 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/ui_win.rc
+++ b/ui_win.rc
@@ -100,8 +100,8 @@ BEGIN
 	LTEXT		"",PARAMCOPYITEM,		60,137, 140,20
 
 	CONTROL		"",PREVIEWITEM,				"Static",SS_OWNERDRAW|SS_NOTIFY,				15,10, 100,100
-	CONTROL		"ZOOMIN_ICO",ZOOMINITEM,	"Static",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,	15,115, 12,12
-	CONTROL		"ZOOMOUT_ICO",ZOOMOUTITEM,	"Static",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,	103,115, 12,12
+	CONTROL		"ZOOMIN_ICO",ZOOMINITEM,	"Static",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,	103,115, 12,12
+	CONTROL		"ZOOMOUT_ICO",ZOOMOUTITEM,	"Static",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,	15,115, 12,12
 	CONTROL		"",ZOOMLEVELITEM, 			"Static",SS_CENTER|SS_NOTIFY,					37,115, 56,12
 
 	LTEXT		"ctl(0)",100,			129,10, 15,12
@@ -175,6 +175,7 @@ BEGIN
 	CHECKBOX	"ctl(7)",FIRSTCTLCHECKITEM+7,	114,197, 35,12
 
 	CHECKBOX	"Protect",PROTECTITEM,	10,219, 35,12
+	CHECKBOX	"Obfuscate",OBFUSCITEM,	48,219, 50,12
 
 	LTEXT		"Category:",100,		10,10, 35,12
 	LTEXT		"Title:",101,			10,25, 35,12
