fix error in PiPL mode field
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@93 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/PiPL_body.rc
+++ b/PiPL_body.rc
@@ -20,7 +20,7 @@
 VENDORID, LC(k,i,n,d), NULLID, 4L, LC(8,B,F,M),	/* Filter module */
 VENDORID, LC(v,e,r,s), NULLID, 4L, latestFilterSubVersion,latestFilterVersion, /* Version Number */
 VENDORID, LC(w,x,8,6), NULLID, 11L, "PluginMain\0\0",  /* Entrypoint Name (Long Word padded C String) */
-VENDORID, LC(m,o,d,e), NULLID, 2L, flagSupportsGrayScale|flagSupportsIndexedColor|flagSupportsRGBColor|flagSupportsCMYKColor|flagSupportsHSLColor|flagSupportsHSBColor|flagSupportsMultichannel|flagSupportsDuotone|flagSupportsLABColor,0,
+VENDORID, LC(m,o,d,e), NULLID, 2L, flagSupportsGrayScale|flagSupportsIndexedColor|flagSupportsRGBColor|flagSupportsCMYKColor|flagSupportsHSLColor|flagSupportsHSBColor|flagSupportsMultichannel,flagSupportsDuotone|flagSupportsLABColor,
 /* FilterCaseInfo - in all cases:
 	   inStraightData,
 	   outStraightData,
