--- a/PiPL.rc
+++ b/PiPL.rc
@@ -88,7 +88,7 @@ END
 	"\0", \
 	"\000\000"		/* 00 000 000|00 000 000 */
 #define RC_IMAGE_DIRECT_PARAM \
-	LC(#,I,m,R),	/*typeImageReference*/ \
+	LC('#',I,m,R),	/*typeImageReference*/ \
 	"\0", \
 	"\260\000"		/* 10 110 000|00 000 000 */
 	
@@ -170,7 +170,7 @@ BEGIN
             VALUE "FileDescription",	"Filter Foundry plugin for Photoshop(R)\0"
             VALUE "FileVersion",		VERSION_STR "\0"
             /*VALUE "InternalName",		"FilterFoundry\0"*/
-            VALUE "LegalCopyright",		"Copyright (C) 2003-7 Toby Thain\0"
+            VALUE "LegalCopyright",		"Copyright (C) 2003-9 Toby Thain\0"
             VALUE "License",			"This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version.\0"
             /*VALUE "LegalTrademarks",	"\0"*/
             VALUE "OriginalFilename",	"FilterFoundry.8bi\0"
