--- a/PiPL.rc
+++ b/PiPL.rc
@@ -163,7 +163,7 @@ VS_VERSION_INFO VERSIONINFO
 BEGIN
     BLOCK "StringFileInfo"
     BEGIN
-        BLOCK "04090000"
+        BLOCK "080904B0"
         BEGIN
             VALUE "Comments",			VI_COMMENTS
             VALUE "CompanyName",		"Telegraphics Pty Ltd, www.telegraphics.com.au\0"
@@ -181,7 +181,7 @@ BEGIN
         END
     END
     BLOCK "VarFileInfo" /* see http://msdn.microsoft.com/library/default.asp?url=/library/en-us/wcesdkr/html/_tools_VarFileInfo_Block.asp */
-    BEGIN
-        VALUE "Translation", 0x0809, 1200	/* UK English, Unicode */
+    BEGIN                                   /* Attention: The translation code must be equal to the "StringFileInfo" block's translation! */
+        VALUE "Translation", 0x0809, 0x04B0	/* UK English, Unicode */
     END
 END
