--- a/PiPL.rc
+++ b/PiPL.rc
@@ -155,7 +155,7 @@ AETE_ID aete
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION	VI_VERS_NUM
  PRODUCTVERSION	VI_VERS_NUM
- FILEFLAGSMASK	0x3fL
+ FILEFLAGSMASK	VS_FFI_FILEFLAGSMASK /*0x3fL*/
  FILEFLAGS		VI_FLAGS
  FILEOS			VOS__WINDOWS32
  FILETYPE		VFT_DLL
