--- a/ui_win.rc
+++ b/ui_win.rc
@@ -51,14 +51,14 @@ BEGIN
 	CONTROL		"ZOOMOUT_ICO",ZOOMOUTITEM,	"Static",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,	15,115, 12,12
 	CONTROL		"",ZOOMLEVELITEM,			"Static",SS_CENTER|SS_NOTIFY,					37,115, 56,12
 
-	LTEXT		"ctl(0)",100,			129,10, 15,12
-	LTEXT		"ctl(1)",101,			129,25, 15,12
-	LTEXT		"ctl(2)",102,			129,40, 15,12
-	LTEXT		"ctl(3)",103,			129,55, 15,12
-	LTEXT		"ctl(4)",104,			129,70, 15,12
-	LTEXT		"ctl(5)",105,			129,85, 15,12
-	LTEXT		"ctl(6)",106,			129,100, 15,12
-	LTEXT		"ctl(7)",107,			129,115, 15,12
+	LTEXT		"ctl(0)",FIRSTCTLLABELITEM,			129,10, 15,12
+	LTEXT		"ctl(1)",FIRSTCTLLABELITEM+1,			129,25, 15,12
+	LTEXT		"ctl(2)",FIRSTCTLLABELITEM+2,			129,40, 15,12
+	LTEXT		"ctl(3)",FIRSTCTLLABELITEM+3,			129,55, 15,12
+	LTEXT		"ctl(4)",FIRSTCTLLABELITEM+4,			129,70, 15,12
+	LTEXT		"ctl(5)",FIRSTCTLLABELITEM+5,			129,85, 15,12
+	LTEXT		"ctl(6)",FIRSTCTLLABELITEM+6,			129,100, 15,12
+	LTEXT		"ctl(7)",FIRSTCTLLABELITEM+7,			129,115, 15,12
 
 	CONTROL		"",FIRSTCTLITEM,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,10, 100,10
 	CONTROL		"",FIRSTCTLITEM+1,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,25, 100,10
@@ -104,19 +104,20 @@ BEGIN
 	LTEXT		"",PARAMAUTHORITEM,		10,137, 42,20
 	LTEXT		"",PARAMCOPYITEM,		60,137, 140,20
 
-	CONTROL		"",PREVIEWITEM,				"Static",SS_OWNERDRAW|SS_NOTIFY,				15,10, 100,100
+	/* The class "Preview" is defined in ui_win.c */
+	CONTROL		"",PREVIEWITEM,				"Preview",SS_OWNERDRAW|SS_NOTIFY,				15,10, 100,100
 	CONTROL		"ZOOMIN_ICO",ZOOMINITEM,	"Static",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,	103,115, 12,12
 	CONTROL		"ZOOMOUT_ICO",ZOOMOUTITEM,	"Static",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,	15,115, 12,12
 	CONTROL		"",ZOOMLEVELITEM, 			"Static",SS_CENTER|SS_NOTIFY,					37,115, 56,12
 
-	LTEXT		"ctl(0)",100,			129,10, 15,12
-	LTEXT		"ctl(1)",101,			129,25, 15,12
-	LTEXT		"ctl(2)",102,			129,40, 15,12
-	LTEXT		"ctl(3)",103,			129,55, 15,12
-	LTEXT		"ctl(4)",104,			129,70, 15,12
-	LTEXT		"ctl(5)",105,			129,85, 15,12
-	LTEXT		"ctl(6)",106,			129,100, 15,12
-	LTEXT		"ctl(7)",107,			129,115, 15,12
+	LTEXT		"ctl(0)",FIRSTCTLLABELITEM,			129,10, 15,12
+	LTEXT		"ctl(1)",FIRSTCTLLABELITEM+1,			129,25, 15,12
+	LTEXT		"ctl(2)",FIRSTCTLLABELITEM+2,			129,40, 15,12
+	LTEXT		"ctl(3)",FIRSTCTLLABELITEM+3,			129,55, 15,12
+	LTEXT		"ctl(4)",FIRSTCTLLABELITEM+4,			129,70, 15,12
+	LTEXT		"ctl(5)",FIRSTCTLLABELITEM+5,			129,85, 15,12
+	LTEXT		"ctl(6)",FIRSTCTLLABELITEM+6,			129,100, 15,12
+	LTEXT		"ctl(7)",FIRSTCTLLABELITEM+7,			129,115, 15,12
 
 	CONTROL		"",FIRSTCTLITEM,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,10, 100,10
 	CONTROL		"",FIRSTCTLITEM+1,		"msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,	154,25, 100,10
