The "caution" sign that indicates an error in the expression does now have a hand cursor that shows up when you hover over the icon, to indicate that the user will receive more information if they click on the icon (*)
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@126 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/ui_win.rc
+++ b/ui_win.rc
@@ -31,6 +31,7 @@ ZOOMOUT_ICO ICON "zoomout.ico"
 /* Cursors for the preview window */
 IDC_FF_HAND_OPEN CURSOR "cursor_hand_open.cur"
 IDC_FF_HAND_GRAB CURSOR "cursor_hand_grab.cur"
+IDC_FF_HAND_QUESTION CURSOR "cursor_hand_question.cur"
 
 /* left,top,w,h */
 
@@ -83,10 +84,11 @@ BEGIN
 	LTEXT		"B =",FIRSTLABELITEM+2,	15,191, 13,12
 	LTEXT		"A =",FIRSTLABELITEM+3,	15,219, 13,12
 
-	CONTROL		"CAUTION_ICO",FIRSTICONITEM,   "Static",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,147, 12,12
-	CONTROL		"CAUTION_ICO",FIRSTICONITEM+1, "Static",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,175, 12,12
-	CONTROL		"CAUTION_ICO",FIRSTICONITEM+2, "Static",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,203, 12,12
-	CONTROL		"CAUTION_ICO",FIRSTICONITEM+3, "Static",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,231, 12,12
+	/* The class "CautionSign" is defined in ui_win.c */
+	CONTROL		"CAUTION_ICO",FIRSTICONITEM,   "CautionSign",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,147, 12,12
+	CONTROL		"CAUTION_ICO",FIRSTICONITEM+1, "CautionSign",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,175, 12,12
+	CONTROL		"CAUTION_ICO",FIRSTICONITEM+2, "CautionSign",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,203, 12,12
+	CONTROL		"CAUTION_ICO",FIRSTICONITEM+3, "CautionSign",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,231, 12,12
 
 	EDITTEXT	FIRSTEXPRITEM,			35,135, 258, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN
 	EDITTEXT	FIRSTEXPRITEM+1,		35,163, 258, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN
