The expression input fields now have a vertical scrollbar
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@127 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/ui_win.rc
+++ b/ui_win.rc
@@ -46,7 +46,7 @@ BEGIN
 	PUSHBUTTON	"Save...",SAVEITEM,		60,253, 42,14
 	PUSHBUTTON	"Make...",MAKEITEM,		110,253, 42,14
 
-	/* The class "Preview" is defined in ui_win.c */
+	/* The class "Preview" is defined during run-time ui_win.c */
 	CONTROL		"",PREVIEWITEM,				"Preview",SS_OWNERDRAW|SS_NOTIFY,				15,10, 100,100
 	CONTROL		"ZOOMIN_ICO",ZOOMINITEM,	"Static",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,	103,115, 12,12
 	CONTROL		"ZOOMOUT_ICO",ZOOMOUTITEM,	"Static",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,	15,115, 12,12
@@ -90,10 +90,10 @@ BEGIN
 	CONTROL		"CAUTION_ICO",FIRSTICONITEM+2, "CautionSign",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,203, 12,12
 	CONTROL		"CAUTION_ICO",FIRSTICONITEM+3, "CautionSign",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,231, 12,12
 
-	EDITTEXT	FIRSTEXPRITEM,			35,135, 258, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN
-	EDITTEXT	FIRSTEXPRITEM+1,		35,163, 258, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN
-	EDITTEXT	FIRSTEXPRITEM+2,		35,191, 258, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN
-	EDITTEXT	FIRSTEXPRITEM+3,		35,219, 258, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN
+	EDITTEXT	FIRSTEXPRITEM,			35,135, 258, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
+	EDITTEXT	FIRSTEXPRITEM+1,		35,163, 258, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
+	EDITTEXT	FIRSTEXPRITEM+2,		35,191, 258, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
+	EDITTEXT	FIRSTEXPRITEM+3,		35,219, 258, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
 END
 
 ID_PARAMDLG DIALOG DISCARDABLE  150,50, 308,161
@@ -106,7 +106,7 @@ BEGIN
 	LTEXT		"",PARAMAUTHORITEM,		10,137, 42,20
 	LTEXT		"",PARAMCOPYITEM,		60,137, 140,20
 
-	/* The class "Preview" is defined in ui_win.c */
+	/* The class "Preview" is defined during run-time ui_win.c */
 	CONTROL		"",PREVIEWITEM,				"Preview",SS_OWNERDRAW|SS_NOTIFY,				15,10, 100,100
 	CONTROL		"ZOOMIN_ICO",ZOOMINITEM,	"Static",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,	103,115, 12,12
 	CONTROL		"ZOOMOUT_ICO",ZOOMOUTITEM,	"Static",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,	15,115, 12,12
