--- a/ui_win.rc
+++ b/ui_win.rc
@@ -24,17 +24,20 @@
 #include "ui.h"
 
 /*CAUTION_BMP BITMAP "caution.bmp"*/
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 CAUTION_ICO ICON "caution.ico"
 ZOOMIN_ICO ICON "zoomin.ico"
 ZOOMOUT_ICO ICON "zoomout.ico"
 
 /* Cursors for the preview window */
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 IDC_FF_HAND_OPEN CURSOR "cursor_hand_open.cur"
 IDC_FF_HAND_GRAB CURSOR "cursor_hand_grab.cur"
 IDC_FF_HAND_QUESTION CURSOR "cursor_hand_question.cur"
 
 /* left,top,w,h */
 
+LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_AUS
 ID_MAINDLG DIALOG DISCARDABLE  150,50, 308,277
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "Filter Foundry"
@@ -96,6 +99,7 @@ BEGIN
 	EDITTEXT	FIRSTEXPRITEM+3,		35,219, 258, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
 END
 
+LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_AUS
 ID_PARAMDLG DIALOG DISCARDABLE  150,50, 308,161
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "Filter Foundry"
@@ -140,6 +144,7 @@ BEGIN
 	EDITTEXT	FIRSTCTLTEXTITEM+7,		269,115, 24,12,	ES_NUMBER|ES_RIGHT
 END
 
+LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_AUS
 ID_BUILDDLG DIALOG DISCARDABLE  150,50, 208,243
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "Make Standalone Filter"
