- Windows: Visual Styles are now supported and always be applied - Bugfix: If you click the zoomlevel-caption for a tiny picture, the zoom ("fit zoom") won't zoom in to >100% anymore.
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@158 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/ui_win.rc
+++ b/ui_win.rc
@@ -50,7 +50,7 @@ BEGIN
 	PUSHBUTTON	"Make...",MAKEITEM,		110,253, 42,14
 
 	/* The class "Preview" is defined during run-time ui_win.c */
-	CONTROL		"",PREVIEWITEM,				"Preview",SS_OWNERDRAW|SS_NOTIFY,				15,10, 100,100
+	CONTROL		"",PREVIEWITEM,				"Preview",SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,		15,10, 100,100
 	CONTROL		"ZOOMIN_ICO",ZOOMINITEM,	"Static",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,	103,115, 12,12
 	CONTROL		"ZOOMOUT_ICO",ZOOMOUTITEM,	"Static",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,	15,115, 12,12
 	CONTROL		"",ZOOMLEVELITEM,			"Static",SS_CENTER|SS_NOTIFY,					37,115, 56,12
@@ -111,7 +111,7 @@ BEGIN
 	LTEXT		"",PARAMCOPYITEM,		60,137, 140,20
 
 	/* The class "Preview" is defined during run-time ui_win.c */
-	CONTROL		"",PREVIEWITEM,				"Preview",SS_OWNERDRAW|SS_NOTIFY,				15,10, 100,100
+	CONTROL		"",PREVIEWITEM,				"Preview",SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,		15,10, 100,100
 	CONTROL		"ZOOMIN_ICO",ZOOMINITEM,	"Static",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,	103,115, 12,12
 	CONTROL		"ZOOMOUT_ICO",ZOOMOUTITEM,	"Static",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,	15,115, 12,12
 	CONTROL		"",ZOOMLEVELITEM, 			"Static",SS_CENTER|SS_NOTIFY,					37,115, 56,12
