--- a/visual_studio/FilterFoundry.vcxproj
+++ b/visual_studio/FilterFoundry.vcxproj
@@ -23,8 +23,8 @@
     <ProjectGuid>{156A2EDB-4922-422D-80DD-3A52308C7C15}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>FilterFoundry</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
     <ProjectName>FilterFoundry</ProjectName>
+    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -73,7 +73,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\FilterFoundry\adobe_photoshop_sdk_cc_2017_win\pluginsdk\photoshopapi\pica_sp;D:\FilterFoundry\adobe_photoshop_sdk_cc_2017_win\pluginsdk\photoshopapi\photoshop;..\..\common\adobeplugin;..\..\common\tt;..;$(IncludePath)</IncludePath>
+    <IncludePath>E:\FilterFoundry\adobe_photoshop_sdk_cc_2017_win\pluginsdk\photoshopapi\pica_sp;E:\FilterFoundry\adobe_photoshop_sdk_cc_2017_win\pluginsdk\photoshopapi\photoshop;..\..\common\adobeplugin;..\..\common\tt;..;$(IncludePath)</IncludePath>
     <TargetExt>.8bf</TargetExt>
     <OutDir>$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(Platform)\$(Configuration)\</IntDir>
@@ -81,7 +81,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\FilterFoundry\adobe_photoshop_sdk_cc_2017_win\pluginsdk\photoshopapi\pica_sp;D:\FilterFoundry\adobe_photoshop_sdk_cc_2017_win\pluginsdk\photoshopapi\photoshop;..\..\common\adobeplugin;..\..\common\tt;.\;$(IncludePath)</IncludePath>
+    <IncludePath>E:\FilterFoundry\adobe_photoshop_sdk_cc_2017_win\pluginsdk\photoshopapi\pica_sp;E:\FilterFoundry\adobe_photoshop_sdk_cc_2017_win\pluginsdk\photoshopapi\photoshop;..\..\common\adobeplugin;..\..\common\tt;.\;$(IncludePath)</IncludePath>
     <TargetExt>.8bf</TargetExt>
     <OutDir>$(Platform)\$(Configuration)\</OutDir>
     <TargetName>$(ProjectName)64</TargetName>
@@ -89,7 +89,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>D:\FilterFoundry\adobe_photoshop_sdk_cc_2017_win\pluginsdk\photoshopapi\pica_sp;D:\FilterFoundry\adobe_photoshop_sdk_cc_2017_win\pluginsdk\photoshopapi\photoshop;..\..\common\adobeplugin;..\..\common\tt;..;$(IncludePath)</IncludePath>
+    <IncludePath>E:\FilterFoundry\adobe_photoshop_sdk_cc_2017_win\pluginsdk\photoshopapi\pica_sp;E:\FilterFoundry\adobe_photoshop_sdk_cc_2017_win\pluginsdk\photoshopapi\photoshop;..\..\common\adobeplugin;..\..\common\tt;..;$(IncludePath)</IncludePath>
     <TargetExt>.8bf</TargetExt>
     <OutDir>$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(Platform)\$(Configuration)\</IntDir>
@@ -97,7 +97,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>D:\FilterFoundry\adobe_photoshop_sdk_cc_2017_win\pluginsdk\photoshopapi\pica_sp;D:\FilterFoundry\adobe_photoshop_sdk_cc_2017_win\pluginsdk\photoshopapi\photoshop;..\..\common\adobeplugin;..\..\common\tt;.\;$(IncludePath)</IncludePath>
+    <IncludePath>E:\FilterFoundry\adobe_photoshop_sdk_cc_2017_win\pluginsdk\photoshopapi\pica_sp;E:\FilterFoundry\adobe_photoshop_sdk_cc_2017_win\pluginsdk\photoshopapi\photoshop;..\..\common\adobeplugin;..\..\common\tt;.\;$(IncludePath)</IncludePath>
     <TargetExt>.8bf</TargetExt>
     <OutDir>$(Platform)\$(Configuration)\</OutDir>
     <TargetName>$(ProjectName)64</TargetName>
@@ -123,8 +123,9 @@
     </ResourceCompile>
     <PreBuildEvent>
       <Command>cd ..
-D:\FilterFoundry\win_flex_bison\win_bison parser.y -d -y
-D:\FilterFoundry\win_flex_bison\win_flex lexer.l y.tab.c</Command>
+E:\FilterFoundry\win_flex_bison\win_bison parser.y -d -y
+E:\FilterFoundry\win_flex_bison\win_flex lexer.l y.tab.c
+move lex.yy.c lex_yy.c</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -147,8 +148,9 @@ D:\FilterFoundry\win_flex_bison\win_flex lexer.l y.tab.c</Command>
     </ResourceCompile>
     <PreBuildEvent>
       <Command>cd ..
-D:\FilterFoundry\win_flex_bison\win_bison parser.y -d -y
-D:\FilterFoundry\win_flex_bison\win_flex lexer.l y.tab.c</Command>
+E:\FilterFoundry\win_flex_bison\win_bison parser.y -d -y
+E:\FilterFoundry\win_flex_bison\win_flex lexer.l y.tab.c
+move lex.yy.c lex_yy.c</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -175,8 +177,9 @@ D:\FilterFoundry\win_flex_bison\win_flex lexer.l y.tab.c</Command>
     </ResourceCompile>
     <PreBuildEvent>
       <Command>cd ..
-D:\FilterFoundry\win_flex_bison\win_bison parser.y -d -y
-D:\FilterFoundry\win_flex_bison\win_flex lexer.l y.tab.c</Command>
+E:\FilterFoundry\win_flex_bison\win_bison parser.y -d -y
+E:\FilterFoundry\win_flex_bison\win_flex lexer.l y.tab.c
+move lex.yy.c lex_yy.c</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -203,8 +206,9 @@ D:\FilterFoundry\win_flex_bison\win_flex lexer.l y.tab.c</Command>
     </ResourceCompile>
     <PreBuildEvent>
       <Command>cd ..
-D:\FilterFoundry\win_flex_bison\win_bison parser.y -d -y
-D:\FilterFoundry\win_flex_bison\win_flex lexer.l y.tab.c</Command>
+E:\FilterFoundry\win_flex_bison\win_bison parser.y -d -y
+E:\FilterFoundry\win_flex_bison\win_flex lexer.l y.tab.c
+move lex.yy.c lex_yy.c</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
