--- a/visual_studio/FilterFoundry.vcxproj
+++ b/visual_studio/FilterFoundry.vcxproj
@@ -113,7 +113,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>false</SDLCheck>
-      <PreprocessorDefinitions>WIN32;WIN_ENV;YY_SKIP_YYWRAP;YY_NO_UNISTD_H;_DEBUG;DLL3_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions);WIN32;WIN_ENV;YY_SKIP_YYWRAP</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;WIN_ENV;YY_SKIP_YYWRAP;YY_NO_UNISTD_H;_DEBUG;DLL3_EXPORTS;_WINDOWS;_USRDLL;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <RuntimeLibrary />
     </ClCompile>
@@ -138,7 +138,7 @@ move lex.yy.c lex_yy.c</Command>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>false</SDLCheck>
-      <PreprocessorDefinitions>WIN32;WIN_ENV;YY_SKIP_YYWRAP;YY_NO_UNISTD_H;_DEBUG;DLL3_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions);WIN32;WIN_ENV;YY_SKIP_YYWRAP</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;WIN_ENV;YY_SKIP_YYWRAP;YY_NO_UNISTD_H;_DEBUG;DLL3_EXPORTS;_WINDOWS;_USRDLL;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <RuntimeLibrary />
     </ClCompile>
@@ -165,7 +165,7 @@ move lex.yy.c lex_yy.c</Command>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>false</SDLCheck>
-      <PreprocessorDefinitions>WIN32;WIN_ENV;YY_SKIP_YYWRAP;YY_NO_UNISTD_H;NDEBUG;DLL3_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions);WIN32;WIN_ENV;YY_SKIP_YYWRAP</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;WIN_ENV;YY_SKIP_YYWRAP;YY_NO_UNISTD_H;NDEBUG;DLL3_EXPORTS;_WINDOWS;_USRDLL;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <RuntimeLibrary />
     </ClCompile>
@@ -194,7 +194,7 @@ move lex.yy.c lex_yy.c</Command>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>false</SDLCheck>
-      <PreprocessorDefinitions>WIN32;WIN_ENV;YY_SKIP_YYWRAP;YY_NO_UNISTD_H;NDEBUG;DLL3_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions);WIN32;WIN_ENV;YY_SKIP_YYWRAP</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;WIN_ENV;YY_SKIP_YYWRAP;YY_NO_UNISTD_H;NDEBUG;DLL3_EXPORTS;_WINDOWS;_USRDLL;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <RuntimeLibrary />
     </ClCompile>
