Windows 'AETE' was moved from PIPL.RC to SCRIPTING.RC to keep the file names similar to the Apple development filenames
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@186 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/win_res.rc
+++ b/win_res.rc
@@ -19,6 +19,7 @@
 
 /* wrapper file for Windows resource compiler input */
 
+#include "Scripting.rc"
 #include "PiPL.rc"
 #include "ui_win.rc"
 #include "manifest.rc"
