--- a/version_win.rc
+++ b/version_win.rc
@@ -1,6 +1,7 @@
 /*
     This file is part of "Filter Foundry", a filter plugin for Adobe Photoshop
-    Copyright (C) 2003-2019 Toby Thain, toby@telegraphics.com.au
+    Copyright (C) 2003-2009 Toby Thain, toby@telegraphics.com.au
+    Copyright (C) 2018-2019 Daniel Marschall, ViaThinkSoft
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -42,7 +43,7 @@ BEGIN
             VALUE "FileDescription",	"Filter Foundry plugin for Photoshop(R)\0"
             VALUE "FileVersion",		VERSION_STR "\0"
             /*VALUE "InternalName",		"FilterFoundry\0"*/
-            VALUE "LegalCopyright",		"Copyright (C) 2003-" RELEASE_YEAR " Toby Thain\0"
+            VALUE "LegalCopyright",		"Copyright (C) 2003-2009 Toby Thain, 2018-" RELEASE_YEAR " Daniel Marschall\0"
             VALUE "License",			"This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version.\0"
             /*VALUE "LegalTrademarks",	"\0"*/
             VALUE "OriginalFilename",	"FilterFoundry.8bf\0"
